Set overflow-wrap property for title, message in entity-dialog. Fixed width of form-paragraph NAS-109263

--- a/src/app/pages/common/entity/entity-dialog/entity-dialog.component.css
+++ b/src/app/pages/common/entity/entity-dialog/entity-dialog.component.css
@@ -5,3 +5,7 @@ button.action-btn {
 div.entity-dialog-form-message {
     margin: 0 0 13px;
 }
+
+.entity-dialog-form-title, .entity-dialog-form-message {
+    overflow-wrap: break-word;
+}
